[package]
name = "solana-accountsdb-reader"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Read AccountsDB data from AppendVec fiels"
keywords = ["solana"]
publish = false

[dependencies]

solana-frozen-abi-macro = "1.18.16"
solana-runtime = "1.18.16"
solana-sdk = "1.18.16"
solana-accounts-db = "1.18.16"

anyhow = "1.0.75"
async-trait = "0.1.73"
bincode = "1.3.3"
env_logger = "0.9.0"
futures = "0.3.28"
itertools = "0.10.3"
log = "0.4.17"
memmap2 = "0.5.5"
num_cpus = "1.16.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.7"
tar = "0.4.38"
thiserror = "1.0.31"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"]}
zstd = "0.11.2"
clap = { version = "4.5.4", features = ["derive"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

